syntax = "proto3";

package go.micro.srv.verify;

service Verify {
    rpc CheckLogin(CheckRequest) returns (CheckResponse) {}
    rpc GetCheckCode(CodeRequest) returns (CodeResponse) {}
    rpc PortalLogin(PortalLoginRequest) returns  (LoginResponse) {}
}

message PortalLoginRequest {
    string phone = 1;
    string code = 2;
    string acname = 3;
    string userip = 4;
    string acip = 5;
    string usermac = 6;
    string apmac = 7;
}

message LoginResponse {
    int64 uid = 1;
    string token = 2;
    string portaldir = 3;
    int64 portaltype = 4;
    int64 adtype = 5;
    string cover = 6;
    string dst = 7;
}

message CodeRequest {
    string phone = 1;
    string acname = 2;
    string apmac = 3;
}

message CodeResponse {
}

message CheckRequest {
    string usermac = 1;
    string acname = 2;
    string apmac = 3;
}

message CheckResponse {
    int64 autologin = 1;
    string img = 2;
    string wxappid = 3;
    string wxsecret = 4;
    string wxshopid = 5;
    string wxauthurl = 6;
    int64 taobao = 7;
    int64 logintype = 8;
    string dst = 9;
    string cover = 10;
}


